# PW-C-Kompresor

./: 1.in  2.in  CMake.sh  CMakeLists.txt  Makefile  README.md  Readme.md  Specyfikacja implementacyjna.tex  Specyfikacja_funkcjonalna.tex  Specyfikacja_implementacyjna.tex  ab.in  ala.in  cipher.c  cipher.h  compare  compare.c  compressor  countCharacters.c  countCharacters.h  debug  decompress.c  decompress.h  encoding.sh  example-valgrind-logs.txt  generate  huffman.c  huffman.h  main.c  out  output.c  output.h  p.in  program  tekst  temp  todo  utils.c  utils.h
src/: alloc.c  alloc.h  bits_analyze.c  bits_analyze.h  countCharacters.c  countCharacters.h  decompress.c  decompress.h  dtree.c  dtree.h  huffman.c  huffman.h  list.c  list.h  main.c  noCompress.c  noCompress.h  output.c  output.h  utils.c  utils.h
test/: 1  1.in  2.in  3.in  corrupted.in  gen.c  m.in  testmax.in  testo3.c  text.in
